<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name_short">SwAlSh</string>
    <string name="app_name_long">Switch Album Sharer</string>
    <string name="error">Error</string>
    <string name="connection_state">%1$s: downloaded %2$d of %3$d</string>
    <string name="connection_state_single">%1$s: %2$.0f%% downloaded</string>
    <string name="scan_another_code">Scan Another</string>
    <string name="open_album">Album</string>
    <string name="title_activity_album">Album</string>
    <string name="share">Share</string>
    <string name="screenshot_from_a_switch">Screenshot from a Switch</string>
    <string name="delete">Delete</string>
    <string name="video_clip_from_a_switch">Video clip from a Switch</string>
    <string name="scan_code">Scan Code</string>
    <string name="intro_text">Make it easier to share Switch screenshots and clips by automating the send to phone process.\n\nGet started by going to the album on your Switch and selecting \"Send to Smart Device\" on an item.</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="video_text_format">%1$.0f sec, from %2$s at %3$s</string>
    <string name="picture_text_format">Picture from %1$s at %2$s</string>
    <string name="pictures">Pictures</string>
    <string name="videos">Videos</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="connect">Connect</string>
    <string name="manual_explanation">Press + (\'Trouble Connecting?\') when the QR code is visible to find the following details.\n\n• Note that the password will change each time.\n•The SSID will stay the same for each Switch and the app will save it.</string>
    <string name="prefilled_ssid">switch_</string>
    <string name="bad_qr_contents">The scanned code does not seem to be for a Wifi network</string>
    <string name="bad_prefix">The SSID (Wifi name) should start with \'switch_\'.\nLong-press the connect button to bypass this check</string>
    <string name="bad_password">The password should be 8 characters long.\nLong-press the connect button to bypass this check</string>
    <string name="ssid_required">You need to put in a SSID</string>
    <string name="password_required">You need to put in a password</string>
    <string name="wifi_disabled">Wi-Fi is not enabled</string>
    <string name="wifi_disabled_message">Enable it then try again.</string>
    <string name="wifi_settings">Wi-Fi settings</string>
    <string name="not_ready_to_share">Not ready to share yet</string>
    <string name="delete_confirmation">Are you sure you want to delete this item?</string>
    <string name="no_more_confirm_prompt">Don\'t show this again</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all_pictures">Delete all pictures</string>
    <plurals name="delete_all_pictures_confirmation_formatted">
        <item quantity="one">Delete the %1$d picture obtained through this app?</item>
        <item quantity="other">Delete all %1$d pictures obtained through this app?</item>
    </plurals>
    <plurals name="delete_all_videos_confirmation_formatted">
        <item quantity="one">Delete the %1$d videos obtained through this app?</item>
        <item quantity="other">Delete all %1$d videos obtained through this app?</item>
    </plurals>
    <string name="delete_all_videos">Delete all videos</string>
    <plurals name="n_failed_to_download_format">
        <item quantity="one">Error: %1$d/%2$d file failed to download</item>
        <item quantity="other">Error: %1$d/%2$d files failed to download</item>
    </plurals>
    <string name="info">Info</string>
    <string name="app_logo">App logo</string>
    <string name="info_author">By Cactric</string>
    <string name="licenses">This app is licensed under the GPLv3</string>
    <string name="pictures_format_str">Pictures (%1$d)</string>
    <string name="videos_format_str">Videos (%1$d)</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="zoom_reset">Reset zoom</string>
    <string name="comm_error">A communication error has occurred</string>
    <string name="source_code">Source code</string>
    <string name="sort">Sort</string>
    <string name="sort_ascending_time">Oldest first</string>
    <string name="sort_descending_time">Newest first</string>
    <string name="by_date_taken">Date captured</string>
    <string name="by_date_added">Date downloaded</string>
    <string name="library_website_button_text">Website</string>
    <string name="library_license_button_text">License</string>
    <string name="no_browser">You don\'t seem to have a browser installed…</string>
    <string name="library_list_heading">Acknowledgements</string>
    <string name="no_pictures">No pictures</string>
    <string name="no_videos">No videos</string>
    <string name="unknown_game_name_format">Unknown [ID: %1$s…]</string>
    <string name="no_games_found">No games found</string>
    <string name="edit_game_name">Edit game\'s name</string>
    <string name="game_name_hint">Game name…</string>
    <string name="edit_game_name_dialog_title">Edit game name</string>
    <string name="title_activity_game_picker">Pick game to filter by</string>
    <string name="error_deleting_items">Error deleting items</string>
    <string name="clear_name">Clear name</string>
    <string name="save">Save</string>
    <string name="captured_pictures_dir">Switch Screenshots</string>
    <string name="captured_videos_dir">Switch Clips</string>
    <string name="filter_by_game">Filter by game</string>
    <string name="export_game_list">Export game list</string>
    <string name="import_game_list">Import game list</string>
    <string name="export_complete">Export completed</string>
    <string name="connect_to_console">Connect to console</string>
    <string name="back">Back</string>
    <string name="camera_perm_needed">Camera permission is needed to scan the QR code</string>
    <string name="no_camera_message">As an alternative, you can also enter the information manually - choose \"Manual Entry\" on the main menu</string>
    <string name="camera_perm_needed_long">Permission to use the device\'s camera is needed to scan a QR code.\nIf you don\'t want to grant permission, you can use Manual Entry instead.</string>
    <string name="permission_dialog_continue">Continue</string>
    <string name="game_picker_total_format">Pictures: %1$d; Videos: %2$d</string>
    <string name="failed_to_import_game_list">Failed to import game list</string>
    <plurals name="pictures_location_format">
        <item quantity="one">The picture has also been saved in the folder “%1$s”</item>
        <item quantity="other">The pictures have also been saved in the folder “%1$s”</item>
    </plurals>
    <plurals name="videos_location_format">
        <item quantity="one">The video has also been saved in the folder “%1$s”</item>
        <item quantity="other">The videos have also been saved in the folder “%1$s”</item>
    </plurals>
</resources>
