<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info_root_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <ImageView
        android:id="@+id/info_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/in_app_logo" />

    <TextView
        android:id="@+id/info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_long"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/info_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_author" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />
</LinearLayout>