<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/manual_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/manual_explanation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/manual_wifi_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:labelFor="@id/manual_wifi_name"
            android:minWidth="64dp"
            android:text="@string/ssid" />

        <EditText
            android:id="@+id/manual_wifi_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text|textVisiblePassword|textNoSuggestions"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/manual_wifi_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:labelFor="@id/manual_wifi_password"
            android:minWidth="64dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/manual_wifi_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/manual_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect" />
</LinearLayout>