<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/album_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/screenshot_from_a_switch"
        tools:src="@drawable/example_screenshot" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/album_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="?attr/colorSurface"
            android:foregroundTint="?attr/colorOnSurface"
            android:adjustViewBounds="false"
            android:contentDescription="@string/delete"
            android:cropToPadding="false"
            android:src="@drawable/delete_icon" />

        <TextView
            android:id="@+id/album_length_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/album_share_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="?attr/colorSurface"
            android:foregroundTint="?attr/colorOnSurface"
            android:adjustViewBounds="false"
            android:contentDescription="@string/share"
            android:cropToPadding="false"
            android:src="@drawable/share_icon" />

    </LinearLayout>

</LinearLayout>