<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <VideoView
        android:id="@+id/album_video"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/video_clip_from_a_switch" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorSurfaceBright"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/album_delete_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete"
            android:cropToPadding="false"
            app:tint="?android:attr/textColorPrimary"
            android:src="@drawable/delete_icon" />

        <TextView
            android:id="@+id/album_length_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/album_share_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share"
            android:cropToPadding="false"
            android:src="@drawable/share_icon"
            app:tint="?android:attr/textColorPrimary" />

    </LinearLayout>

</LinearLayout>