<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="8dp"
    app:contentPadding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/album_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/screenshot_from_a_switch" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSurfaceBright"
            android:gravity="start|center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/album_delete_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:contentDescription="@string/delete"
                android:cropToPadding="false"
                android:src="@drawable/delete_icon"
                app:tint="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/album_length_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/album_share_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:adjustViewBounds="false"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share"
                android:cropToPadding="false"
                android:src="@drawable/share_icon"
                app:tint="?android:attr/textColorPrimary" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>